@@ -13,6 +13,8 @@ dependencies {
     implementation project(':secp256k1-api')
     implementation project(':secp256k1-bouncy')
     implementation project(':secp256k1-foreign')
+
+    implementation group: 'org.graalvm.nativeimage', name: 'library-support', version: '24.0.0'
 }
 
 jar {
@@ -61,6 +63,8 @@ tasks.register('nativeCompile', Exec) {
             '-H:Path=build',
             '-H:Name=schnorr',
             '-H:+ForeignAPISupport',
+            '--features=org.bitcoinj.secp256k1.examples.ForeignRegistrationFeature',
+            '--enable-native-access=ALL-UNNAMED',
             '-H:+ReportUnsupportedElementsAtRuntime',
             '-H:+ReportExceptionStackTraces'
     ]
